<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cardView"
    android:layout_margin="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/txshelfNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shelfNumber"
            android:textSize="30sp"/>
        <TextView
            android:id="@+id/txvendorCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vendorCode"
            android:textSize="30sp"/>
        <TextView
            android:id="@+id/txauthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textSize="30sp"/>
        <TextView
            android:id="@+id/txrackNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rackNumber"
            android:textSize="30sp"/>
        <TextView
            android:id="@+id/txtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="30sp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>